--- a/static/css/main.css
+++ b/static/css/main.css
@@ -46,10 +46,10 @@ body, html {
 /* Hero image */
 .hero-image {
     /* Use "linear-gradient" to add a darken background effect to the image. This will make the text easier to read */
-    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url('static/images/background.jpeg');
+    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url('./static/images/background.jpeg');
 
     /* Set a specific height */
-    height: 75%;
+    height: 60%;
 
     /* Position and center the image to scale nicely on all screens */
     background-position: center;
