--- a/static/css/main.css
+++ b/static/css/main.css
@@ -23,7 +23,7 @@ body, html {
 .static-slider3 .title {
     line-height: 50px;
     font-size: 3em;
-    font-weight: normal;
+    font-weight: 400;
 }
 
 .static-slider3 .title span {
@@ -38,12 +38,15 @@ body, html {
         font-weight: 400;
 	}
 }
-/* ----- Banner end ----- */
 
-
-
-
-
+#container{
+    width:100%;
+    height:700px;
+    position:absolute;
+    background:#ffffff;
+    top:0;
+    left:0;
+}
 
 /* Hero image */
 .hero-image {
