--- a/static/css/main.css
+++ b/static/css/main.css
@@ -11,7 +11,7 @@ body, html {
     padding: 3em 2em;
     top: 50%;
     left: 50%;
-    vertical-align: middle;
+    display: table-cell; vertical-align: middle;
 }
 
 .static-slider3 h1 {
