--- a/static/css/main.css
+++ b/static/css/main.css
@@ -25,7 +25,7 @@ body, html {
     line-height: 50px;
     font-size: 3em;
     font-weight: 200;
-    vertical-align: center;
+    vertical-align: middle;
 }
 
 .static-slider3 .title span {
