--- a/static/css/main.css
+++ b/static/css/main.css
@@ -20,13 +20,26 @@ body, html {
     font-size: 3.5em;
 }
 
-.static-slider3 .title {
+.static-slider3 h2 {
+    color: #dedfe0;
+    font-weight: 200;
+    margin: 0.4em 0;
+    font-size: 3em;
+}
+
+.static-slider3 .h1title {
+    line-height: 50px;
+    font-size: 3.5em;
+    font-weight: 200;
+}
+
+.static-slider3 .h2title {
     line-height: 50px;
     font-size: 3em;
     font-weight: 200;
 }
 
-.static-slider3 .title span {
+.static-slider3 .h2title span {
     /* Attributes for scrolling text */
     /* border-bottom: 3px solid #000000; */
 }
@@ -38,7 +51,13 @@ body, html {
 }
 
 @media (max-width:767px) {
-	.static-slider3 .title{
+	.static-slider3 .h1title{
+		line-height: 50px;
+		font-size: 3.5em;
+        font-weight: 200;
+	}
+
+    .static-slider3 .h2title{
 		line-height: 30px;
 		font-size: 24px;
         font-weight: 400;
