--- a/static/css/main.css
+++ b/static/css/main.css
@@ -29,9 +29,12 @@ body, html {
 }
 
 .container {
+    margin: 0;
     position: absolute;
     top: 50%;
-    transform: translate(0, -50%);
+    left: 50%;
+    margin-right: -50%;
+    transform: translate(-50%, -50%) }
 }
 
 @media (max-width:767px) {
