--- a/static/css/main.css
+++ b/static/css/main.css
@@ -28,13 +28,17 @@ body, html {
     /* border-bottom: 3px solid #000000; */
 }
 
-.container {
-    margin: 0;
+.container>.content-center {
     position: absolute;
     top: 50%;
     left: 50%;
-    margin-right: -50%;
-    transform: translate(-50%, -50%) }
+    -webkit-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
+    text-align: center;
+    padding: 0 15px;
+    color: #FFFFFF;
+    width: 100%;
+    max-width: 880px;
 }
 
 @media (max-width:767px) {
