--- a/static/css/main.css
+++ b/static/css/main.css
@@ -58,18 +58,14 @@ body, html {
     opacity: 0.6;
 }
 
-@media (max-width:767px) {
-	.static-slider3 .title{
-		line-height: 30px;
-		font-size: 24px;
-        font-weight: 400;
-	}
-}
-
 
 /* ------------------ */
 /*       Contact      */
 /* ------------------ */
+.me-turquoise{
+    background: #01a2a6
+}
+
 .contact{
     padding-bottom: 80px;
 }
@@ -172,9 +168,199 @@ body, html {
     transform: scale(.8);
 }
 
+.me-white-bg{ background: #FFF }
 
 
 
-.me-turquoise{
-    background: #01a2a6
+
+
+
+
+
+
+
+
+
+/* lg */
+@media (max-width: 1170px) {
+
+    .short-description{
+        padding-right: 300px;
+        font-size: 14px;
+    }
+    .mobile-versions{
+        right: 15px
+    }
+    .work-row .ipad-wrapper{
+        width: 200px;
+    }
+    .work-row .iphone-wrapper{
+        width: 90px;
+    }
+}
+/* md */
+@media (max-width: 940px) {
+    .short-description{
+        position: relative;
+        min-height: 245px;
+        background: #333434;
+        left: 0;
+        bottom: 0;
+        padding-right: 241px;
+        font-weight: 100;
+        -moz-transform: scale(1) translateY(100%);
+        -webkit-transform: scale(1) translateY(100%);
+        -o-transform: scale(1) translateY(100%);
+        -ms-transform: scale(1) translateY(100%);
+        transform: scale(1) translateY(100%);
+        padding-bottom: 50px;
+    }
+    .mobile-versions{
+        right: 5px;
+        top: -74px;
+        bottom: auto;
+        width: 208px;
+    }
+    .work-row .ipad-wrapper{ width: 150px }
+    .work-row .iphone-wrapper{ width: 80px }
+
+    .me-tooltip:hover:after{
+        bottom: -37px;
+    }
+}
+/* sm */
+@media (max-width: 728px) {
+	.static-slider3 .title{
+		line-height: 30px;
+		font-size: 24px;
+        font-weight: 400;
+	}
+    h2{
+        font-size: 60px;
+    }
+	.contact-supratitle{
+		max-width: 230px;
+		margin-left: auto;
+		margin-right: auto;
+		margin-bottom: 19px;
+	}
+
+    .me-text-shadow-sm{
+        text-shadow: 1px 2px 6px rgba(0,0,0,.4);
+    }
+    .vinyl-image{
+        bottom: -50%;
+        top: auto;
+        top: -20%;
+        max-width: 178%;
+        height: auto;
+    }
+    .skills-wrapper{
+        height: auto !important;
+        margin-top: 20px
+    }
+    .skill-overflow-wrapper{
+        width: 50%;
+        position: relative;
+        margin-bottom: 28px;
+        float: left;
+        left: 0;
+        margin-left: 0
+    }
+    .skill{
+        width: 80%;
+        max-width: 150px;
+        margin-left: auto;
+        margin-right: auto;
+    }
+    .skill-md-connector{
+        position: relative;
+        top: 0;
+        clear: both;
+        left: 0;
+        right: 0
+    }
+    .frontend-title{
+        float: none;
+        width: 100%;
+    }
+    .other-skills{
+        margin: 15px 0 60px;
+        text-align: center;
+        padding: 0 30px;
+    }
+    .sm-hide{
+        display: none;
+    }
+	.feedback p, .feedback span{
+		max-width: 400px;
+	}
+    .work-row {
+        min-height: 240px;
+        max-height: 240px;
+    }
+}
+/* mi */
+@media (max-width: 480px) {
+    html, body{
+        height: auto;
+        min-height: 100%;
+    }
+    .skills-wrapper{
+        width: 100%;
+    }
+    .module{
+        padding-left: 15px;
+		padding-right: 15px;
+    }
+    .subtitle, h2{
+        padding: 0;
+    }
+
+    .hidden-menu{
+        width: 250px;
+    }
+    .hidden-menu img{
+        width: 90%;
+        margin-bottom: 20px;
+    }
+    .open-menu .main-wrapper {
+        left: -250px;
+    }
+
+    .mobile.open-menu .menu-toggle, .mobile.open-menu .to-top, .open-menu .menu-toggle {
+        right: 260px;
+    }
+    .open-menu .header{ display: block; top: -100px }
+
+    /* work section */
+    .work-row {
+        margin: 0 -15px;
+    }
+	.work-row img.cover{
+		width: auto;
+		height: 300px;
+	}
+    .short-description{
+        padding-right: 20px;
+    }
+    .mobile-versions{
+        position: relative;
+        width: 250px;
+        margin: -140px auto -20px;
+        top: 0;
+        right: auto;
+    }
+    .work-row .iphone-wrapper {
+        width: 95px;
+    }
+    .work-row .ipad-wrapper {
+        width: 200px;
+    }
+    .me-carousel .feedback-controll{
+        right: 45px;
+    }
+    .feedback p, .feedback span, .controll-wrapper{
+		max-width: 300px;
+	}
 }
