--- a/static/css/main.css
+++ b/static/css/main.css
@@ -70,13 +70,15 @@ body, html {
 /* ------------------ */
 /*       Contact      */
 /* ------------------ */
-.me-turquoise{
-    background: #01a2a6
-}
 
-.me-white-bg{ 
-    background: #FFF 
-}
+/* color */
+.me-lightblue-bg{ background: #60aae7 }
+.me-white-bg{ background: #FFF }
+.me-black-bg{ background: #232323 }
+.me-yellow-bg{ background: #F2D00E;}
+.me-orange-bg{ background: #ff8a2c}
+.me-darkgrey{ background: #1f1f1f;}
+.me-turquoise{ background: #01a2a6}
 
 .contact{
     padding-bottom: 80px;
