--- a/static/css/main.css
+++ b/static/css/main.css
@@ -328,3 +328,27 @@ body, html {
 .footer {
     padding: 40px 0 80px;
 }
+
+
+/* ----------------- */
+/*      Projects     */
+/* ----------------- */
+.card {
+    margin-bottom: 10px;
+}
+
+.card {
+    border: 0;
+    border-radius: 0.1875rem;
+    display: inline-block;
+    position: relative;
+    overflow: hidden;
+    width: 100%;
+    margin-bottom: 20px;
+    -webkit-box-shadow: 0px 5px 25px 0px rgba(0, 0, 0, 0.2);
+    box-shadow: 0px 5px 25px 0px rgba(0, 0, 0, 0.2);
+}
+
+.card .card-body {
+    min-height: 100px;
+}
