--- a/static/css/main.css
+++ b/static/css/main.css
@@ -2,6 +2,10 @@ body, html {
     height: 100%;
 }
 
+.section {
+    padding-bottom: 0;
+}
+
 /* ------------------ */
 /*       Banner       */
 /* ------------------ */
