--- a/static/css/main.css
+++ b/static/css/main.css
@@ -6,6 +6,10 @@ body, html {
     padding-bottom: 0;
 }
 
+.footer {
+    padding: 40px 0 80px;
+}
+
 /* ------------------ */
 /*       Banner       */
 /* ------------------ */
