--- a/static/css/main.css
+++ b/static/css/main.css
@@ -70,10 +70,19 @@ body, html {
 .me-lightblue-bg{ background: #60aae7 }
 .me-white-bg{ background: #FFF }
 .me-black-bg{ background: #232323 }
-.me-yellow-bg{ background: #F2D00E;}
+.me-yellow-bg{ background: #E3D372;}
 .me-orange-bg{ background: #ff8a2c}
 .me-darkgrey{ background: #1f1f1f;}
 .me-turquoise{ background: #01a2a6}
+
+/* absolute */
+.me-accelerate{
+    /* hardware accelerate */
+    -webkit-transform: translate3d(0, 0, 0);
+    transform        : translate3d(0, 0, 0);
+}
+
+
 
 .contact{
     padding-bottom: 80px;
