--- a/static/css/main.css
+++ b/static/css/main.css
@@ -10,7 +10,7 @@ body, html {
 .me-lightblue-bg{ background: #60aae7 }
 .me-white-bg{ background: #FFF }
 .me-black-bg{ background: #232323 }
-.me-yellow-bg{ background: #fff199;}
+.me-yellow-bg{ background: #F2DA64;}
 .me-orange-bg{ background: #ff8a2c}
 .me-darkgrey{ background: #1f1f1f;}
 .me-turquoise{ background: #01a2a6}
