--- a/static/css/main.css
+++ b/static/css/main.css
@@ -398,7 +398,7 @@ body, html {
 /* -------------------- */
 /*   ouislider - 9.1.0  */
 /* -------------------- */
- .noUi-target,
+ /* .noUi-target,
  .noUi-target * {
      -webkit-touch-callout: none;
      -webkit-tap-highlight-color: transparent;
@@ -423,9 +423,9 @@ body, html {
      position: relative;
      z-index: 1;
      /* Fix 401 */
- }
+ /* } */
  
- .noUi-connect {
+ /* .noUi-connect {
      position: absolute;
      right: 0;
      top: 0;
@@ -452,24 +452,24 @@ body, html {
  
  .noUi-state-drag * {
      cursor: inherit !important;
- }
+ } */ */
  
  
  /* Painting and performance;
   * Browsers can paint handles in their own layer.
   */
  
- .noUi-base,
+ /* .noUi-base,
  .noUi-handle {
      -webkit-transform: translate3d(0, 0, 0);
      transform: translate3d(0, 0, 0);
- }
+ } */
  
  
  /* Slider size and handle placement;
   */
  
- .noUi-horizontal {
+ /* .noUi-horizontal {
      height: 1px;
  }
  
@@ -494,13 +494,13 @@ body, html {
      height: 34px;
      left: -6px;
      top: -17px;
- }
+ } */
  
  
  /* Styling;
   */
  
- .noUi-target {
+ /* .noUi-target {
      background-color: rgba(182, 182, 182, 0.3);
      border-radius: 3px;
  }
@@ -510,13 +510,13 @@ body, html {
      border-radius: 3px;
      -webkit-transition: background 450ms;
      transition: background 450ms;
- }
+ } */
  
  
  /* Handles and cursors;
   */
  
- .noUi-draggable {
+ /* .noUi-draggable {
      cursor: ew-resize;
  }
  
@@ -535,18 +535,18 @@ body, html {
      -ms-transition: 300ms ease 0s;
      -o-transform: 300ms ease 0s;
      transition: 300ms ease 0s;
- }
+ } */
  
- .noUi-active {
+ /* .noUi-active {
      -webkit-transform: scale3d(1.5, 1.5, 1);
      transform: scale3d(1.5, 1.5, 1);
- }
+ } */
  
  
  /* Disabled state;
   */
  
- [disabled] .noUi-connect {
+ /* [disabled] .noUi-connect {
      background: #B8B8B8;
  }
  
@@ -554,14 +554,14 @@ body, html {
  [disabled].noUi-handle,
  [disabled] .noUi-handle {
      cursor: not-allowed;
- }
+ } */
  
  
  /* Base;
   *
   */
  
- .noUi-pips,
+ /* .noUi-pips,
  .noUi-pips * {
      -webkit-box-sizing: border-box;
      box-sizing: border-box;
@@ -570,14 +570,14 @@ body, html {
  .noUi-pips {
      position: absolute;
      color: #999;
- }
+ } */
  
  
  /* Values;
   *
   */
  
- .noUi-value {
+ /* .noUi-value {
      position: absolute;
      text-align: center;
  }
@@ -585,14 +585,14 @@ body, html {
  .noUi-value-sub {
      color: #ccc;
      font-size: 10px;
- }
+ } */
  
  
  /* Markings;
   *
   */
  
- .noUi-marker {
+ /* .noUi-marker {
      position: absolute;
      background: #CCC;
  }
@@ -603,14 +603,14 @@ body, html {
  
  .noUi-marker-large {
      background: #AAA;
- }
+ } */
  
  
  /* Horizontal layout;
   *
   */
  
- .noUi-pips-horizontal {
+ /* .noUi-pips-horizontal {
      padding: 10px 0;
      height: 80px;
      top: 100%;
@@ -635,14 +635,14 @@ body, html {
  
  .noUi-marker-horizontal.noUi-marker-large {
      height: 15px;
- }
+ } */
  
  
  /* Vertical layout;
   *
   */
  
- .noUi-pips-vertical {
+ /* .noUi-pips-vertical {
      padding: 0 10px;
      height: 100%;
      top: 0;
@@ -692,7 +692,7 @@ body, html {
      transform: translate(0, -50%);
      top: 50%;
      right: 120%;
- }
+ } */
  
  .slider.slider-neutral .noUi-connect,
  .slider.slider-neutral.noUi-connect {
