--- a/static/css/main.css
+++ b/static/css/main.css
@@ -56,10 +56,11 @@ h2{
 .me-lightblue-bg{ background: #60aae7 }
 .me-white-bg{ background: #FFF }
 .me-black-bg{ background: #232323 }
-.me-yellow-bg{ background: #F2DA64;}
-.me-orange-bg{ background: #ff8a2c}
-.me-darkgrey{ background: #1f1f1f;}
-.me-turquoise{ background: #01a2a6}
+.me-yellow-bg{ background: #F7B733;}
+.me-orange-bg{ background: #FC4A1A}
+.me-lightgrey{ background: #1f1f1f;}
+.me-darkgrey{ background: #DFDCF3;}
+.me-turquoise{ background: #4ABDAC}
 
 
 /* ------------------ */
