--- a/static/css/main.css
+++ b/static/css/main.css
@@ -19,7 +19,7 @@ h2{
     font-size: 50px;
     margin-top: 30px;
     margin-bottom: 30px;
-    text-shadow: 2px 2px #525050;
+    text-shadow: 2px 2px 4px #000000;
 }
 
 
