--- a/static/css/main.css
+++ b/static/css/main.css
@@ -83,6 +83,7 @@ h2{
     font-weight: 200;
     margin: 0.4em 0;
     font-size: 3.5em;
+    text-shadow: 2px 2px 5px #d3d1d1;
 }
 
 .static-slider3 .title {
