--- a/static/css/main.css
+++ b/static/css/main.css
@@ -402,9 +402,9 @@ h2{
 
 
 /* --------------------------- */
-/*      Education & Skills     */
+/*      Skills & Education     */
 /* --------------------------- */
-.education-skills{
+.skills-education{
     padding-bottom: 65px;
 }
 
