--- a/static/css/main.css
+++ b/static/css/main.css
@@ -3,9 +3,9 @@ body, html {
     height: 100%;
 }
 
-.section {
+/* .section {
     padding-bottom: 0;
-}
+} */
 
 .subtitle, h2{
     max-width: 850px;
