--- a/static/css/main.css
+++ b/static/css/main.css
@@ -116,6 +116,46 @@ h2{
     padding-bottom: 80px;
 }
 
+.compass{
+    position: absolute;
+    left: 50%;
+    top: -150px;
+    z-index: -1;
+    margin-left: -150px;
+    opacity: .4;
+    width: 300px;
+    height: 300px;
+    background: url(../images/decorators/compass.png) no-repeat top left;
+    -webkit-transition: transform 1s ease;
+    -moz-transition: transform 1s ease;
+    -ms-transition: transform 1s ease;
+    -o-transition: transform 1s ease;
+    transition: transform 1s ease;
+
+    -ms-transform: rotate(0deg); /* IE 9 */
+    -webkit-transform: rotate(0deg); /* Chrome, Safari, Opera */
+    transform: rotate(0deg);
+}
+
+.overflowbox{
+    height: 94px;
+    overflow: hidden;
+    margin: 0 15px;
+}
+
+.overflowbox img{
+    margin-left: -100%;
+    -webkit-transition: margin 1s ease;
+    -moz-transition: margin 1s ease;
+    -ms-transition: margin 1s ease;
+    -o-transition: margin 1s ease;
+    transition: margin 1s ease;
+}
+
+.animate .overflowbox img{
+    margin-left: 0%;
+}
+
 
 /* ------------------ */
 /*      Education     */
