--- a/static/css/main.css
+++ b/static/css/main.css
@@ -125,7 +125,7 @@ h2{
     opacity: .4;
     width: 300px;
     height: 300px;
-    background: url(../images/decorators/compass.png) no-repeat top left;
+    background: url(static/images/icons/cogwheel.png) no-repeat top left;
     -webkit-transition: transform 1s ease;
     -moz-transition: transform 1s ease;
     -ms-transition: transform 1s ease;
