--- a/static/css/main.css
+++ b/static/css/main.css
@@ -108,7 +108,7 @@ h2{
     position: relative;
     width: 100%;
     overflow-x: hidden;
-    padding: 0 30px;
+    /* padding: 0 30px; */
     box-sizing: border-box;
     z-index: 10;
     padding-top: 65px;
