--- a/static/css/main.css
+++ b/static/css/main.css
@@ -111,7 +111,7 @@ h2{
     /* padding: 0 30px; */
     box-sizing: border-box;
     z-index: 10;
-    padding-top: 65px;
+    padding-top: 0 30px;
     padding-bottom: 45px;
 }
 
