--- a/static/css/main.css
+++ b/static/css/main.css
@@ -136,8 +136,7 @@ h2{
     overflow: hidden;
     width: 100%;
     margin-bottom: 20px;
-    -webkit-box-shadow: 0px 5px 25px 0px rgba(0, 0, 0, 0.2);
-    box-shadow: 0px 5px 25px 0px rgba(0, 0, 0, 0.2);
+    background-color: #ffffff00;
 }
 
 .skills>.card .card-body {
