--- a/static/css/main.css
+++ b/static/css/main.css
@@ -80,7 +80,7 @@ h2{
     transform: translate(-50%, -50%);
     text-align: center;
     padding: 0 15px;
-    color: #FFFFFF;
+    /* color: #FFFFFF; */
     width: 100%;
     max-width: 880px;
 }
