--- a/static/css/main.css
+++ b/static/css/main.css
@@ -232,7 +232,7 @@ h2{
 /* ----------------- */
 /*      Projects     */
 /* ----------------- */
-.experience .card {
+.projects .card {
     border: 0;
     border-radius: 0.1875rem;
     display: inline-block;
@@ -244,7 +244,7 @@ h2{
     box-shadow: 0px 5px 25px 0px rgba(0, 0, 0, 0.2);
 }
 
-.experience .card .card-body {
+.projects .card .card-body {
     min-height: 100px;
 }
 
