--- a/static/css/main.css
+++ b/static/css/main.css
@@ -19,9 +19,19 @@ h2{
     letter-spacing: 0.15em;
 }
 
+.section {
+    padding: 70px 0;
+    position: relative;
+    background: #FFFFFF;
+}
+
+.section .row+.category {
+    margin-top: 15px;
+}
+
 
 /* background */
-.bg-primary {background-color: #4ABDAC !important;}
+.bg-primary {background-color: #4ABDAC;}
 
 
 /* color */
@@ -218,6 +228,10 @@ h2{
 
 .education .card .card-body {
     min-height: 100px;
+}
+
+.cc-education .h5 {
+    margin-bottom: 0;
 }
 
 .cc-education .cc-education-header {
