--- a/static/css/main.css
+++ b/static/css/main.css
@@ -241,7 +241,7 @@ figure figcaption {
 }
 
 .cc-education .cc-education-header {
-    padding-top: 60px;
+    /* padding-top: 60px; */
     padding-right: 0;
     text-align: center;
     align-content: center;
