--- a/static/css/main.css
+++ b/static/css/main.css
@@ -241,10 +241,12 @@ figure figcaption {
 }
 
 .cc-education .cc-education-header {
-    /* padding-top: 60px; */
-    padding-right: 0;
-    text-align: center;
-    align-content: center;
+    margin: 0;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    -ms-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
     color: #fff;
 }
 
