--- a/static/css/main.css
+++ b/static/css/main.css
@@ -230,6 +230,7 @@ figure figcaption {
     display: inline-block;
     position: relative;
     overflow: hidden;
+    height: 200px;
     width: 100%;
     margin-bottom: 20px;
     -webkit-box-shadow: 0px 5px 25px 0px rgba(0, 0, 0, 0.2);
