--- a/static/css/main.css
+++ b/static/css/main.css
@@ -119,7 +119,7 @@ figure figcaption {
 /* ----------------- */
 .about-me{
     /* Use "linear-gradient" to add a darken background effect to the image. This will make the text easier to read */
-    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url('../images/about_pic.JPG');
+    background-image: url('../images/about_pic.JPG');
 
     /* Set a specific height */
     height: 60%;
