--- a/static/css/main.css
+++ b/static/css/main.css
@@ -127,8 +127,8 @@ figure figcaption {
     /* Position and center the image to scale nicely on all screens */
     background-position: 25% 75%;
     background-repeat: no-repeat;
-    background-size: contain;
-    position: relative;
+    background-size: cover;
+    /* position: relative; */
 
     z-index: 10;
     padding-top: 0 30px;
